# vibe-kanban

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.omc/: project-memory.json
crates/db/.sqlx/: query-0efc0d0ded67474436d41b0e792b70c7805eea9f9eda2731f794446052f6cc22.json  query-2ccdfb96cbbddedf2f747eccfc7fbbdd8e239df4c75f2e3c983f4fb19f8b1c7b.json  query-42f206448819f5396f4900d33cc93f10f375356c4d1bf9249e3290641a217757.json  query-5c0c45c1135821bcd8249f2e586315eaad22bb54eb2552756de842eadeb3ea0c.json  query-836f722efde73cd5e7a72735bd1da5f11edbd515bc1bf1c76205d64668c5770d.json  query-ae6cb01955a9ba988dccfa405eb5930eb0a460b57d96951a8d2daab8df527909.json  query-b8d82e56e224bfba61d5e0118b3cc611926742562d43d639cec0a452805e9161.json  query-ccff1ac0e058cf58d40e9485ba0289fe15952892bb516d30200b41c91e3b5100.json
crates/db/migrations/: 20260306000000_add_chat_sessions.sql
crates/db/src/models/: chat_session.rs  mod.rs
crates/desktop-bridge/: Cargo.toml
crates/desktop-bridge/src/: lib.rs  main.rs  service.rs  signing.rs  ssh_config.rs  tunnel.rs
crates/embedded-ssh/: Cargo.toml
crates/embedded-ssh/src/: config.rs  handler.rs  host_key.rs  lib.rs  sftp.rs  ws_adapter.rs
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: lib.rs
crates/relay-control/src/: signing.rs
crates/relay-tunnel/src/: client.rs  lib.rs  server.rs  ws_io.rs
crates/relay-tunnel/src/server_bin/routes/: mod.rs  tunnel.rs
crates/server/: Cargo.toml
crates/server/src/: bridge.rs  error.rs  lib.rs  main.rs  tunnel.rs
crates/server/src/routes/: chat_sessions.rs  filesystem.rs  mod.rs  open_remote_editor.rs  remote.rs  ssh_session.rs  task_attempts.rs  tunnel.rs
crates/services/: Cargo.toml
crates/services/src/services/: container.rs  mod.rs  notification.rs  remote_access.rs
crates/tauri-app/: Cargo.toml
crates/tauri-app/src/: main.rs
crates/utils/src/: assets.rs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/dialogs/tasks/: TaskFormDialog.tsx
frontend/src/components/layout/: Navbar.tsx  ProjectSwitcher.tsx  ProjectTabSwitcher.tsx
frontend/src/components/ui/: wysiwyg.tsx
frontend/src/components/ui-new/dialogs/settings/: GeneralSettingsSection.tsx  RemoteAccessSection.tsx
frontend/src/components/ui/wysiwyg/plugins/: paste-markdown-plugin.tsx  static-toolbar-plugin.tsx
frontend/src/hooks/: useChatSessions.ts
frontend/src/i18n/locales/en/: settings.json
frontend/src/i18n/locales/zh-Hans/: settings.json
frontend/src/lib/: api.ts  paths.ts  remoteAccessApi.ts
frontend/src/pages/: ProjectChat.tsx  ProjectFiles.tsx
scripts/: dev-windows.js
shared/: types.ts
