[package]
name = "desktop-bridge"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "desktop-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
futures-util = "0.3"
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
