[package]
name = "desktop-bridge"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dirs = "5"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
native-tls = "0.2"
relay-tunnel = { path = "../relay-tunnel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = "0.7"
tracing = "0.1"
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }
