[package]
name = "vibe-kanban-tauri"
version = "0.1.20"
edition = "2024"

[[bin]]
name = "vibe-kanban-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"

server = { path = "../server" }
services = { path = "../services" }
async-trait = { workspace = true }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rustls = { workspace = true }
